--- a/app/src/main/res/layout/sp_fragment_job_detail.xml
+++ b/app/src/main/res/layout/sp_fragment_job_detail.xml
@@ -19,11 +19,11 @@
     <!--"@drawable/white_linen_paper_texture"-->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
-        android:background="@color/white"
+        android:background="@color/beige"
         android:layout_height="match_parent">
 
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/jobId"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
@@ -32,11 +32,11 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
-                android:text="@string/job_id" />
+                android:text="@string/job_id" />-->
 
             <TextView
                 android:id="@+id/jobType"
@@ -47,7 +47,7 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
@@ -63,7 +63,7 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
@@ -78,7 +78,7 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
@@ -115,7 +115,7 @@
                 android:typeface="serif"
                 android:text="@string/service_provider_phone" />
 
-         -->
+
             <TextView
                 android:id="@+id/pincode"
                 android:layout_width="match_parent"
@@ -125,7 +125,7 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
@@ -140,11 +140,11 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
-                android:text="@string/date_initiated" />
+                android:text="@string/date_initiated" />-->
 
             <TextView
                 android:id="@+id/customer_preferred_date"
@@ -155,7 +155,7 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
@@ -170,13 +170,13 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/day_segment" />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/dateStarted"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
@@ -185,7 +185,7 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
@@ -200,11 +200,11 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
-                android:text="@string/date_completed" />
+                android:text="@string/date_completed" />-->
 
             <TextView
                 android:id="@+id/description"
@@ -215,7 +215,7 @@
                 android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
@@ -231,7 +231,7 @@
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/white"
+                android:background="@color/beige"
                 android:textSize="15dp"
                 android:textStyle="normal"
                 android:typeface="serif"
